# ovro-cd-tools

./: .gitignore  README.md
count-ovro-files/: Cargo.toml  README.md
count-ovro-files/src/: main.rs
db-inspector/: README.md  pyproject.toml
db-inspector/src/db_inspector/: __init__.py  cli.py  dataframe.py
db-inspector/tests/: test_dataframe.py
mnc-aggregator/: LICENSE  README.md  pyproject.toml
mnc-aggregator/src/mnc_aggregator/: __init__.py  cli.py  datarecorder.py  interface.py  snaps.py  version.py  xengine.py
mnc-aggregator/src/mnc_aggregator/subsystems/: __init__.py  datarecorder.py  snaps.py  xengine.py
mnc-aggregator/src/mnc_aggregator/tests/: __init__.py  test_interface.py
nightly-movie/: .gitignore  pyproject.toml
nightly-movie/src/nightly_movie/: __init__.py  beam.py  cli.py  utils.py
nightly-movie/src/nightly_movie/test/: test_utils.py
qa/: .total_power.py.swp  array_select.py  batch_total_power.sh  total_power.py
utils/: select_cal_freqs.py
