[package]
name = "count-ovro-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.9"
anyhow = "=1"
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.3"
walkdir = "2.4.0"
