[build-system]
 requires      = [ "hatchling", "hatch-vcs" ]
 build-backend = "hatchling.build"


[project]
 dependencies = [
  "astropy",
  "casperfpga",
  "dsa110-pyutils@git+https://github.com/dsa110/dsa110-pyutils.git",
  "etcd3",
  "glances",
  "influxdb",
  "ipython",
  "lwa_f",
  "matplotlib",
  "mnc-python@git+https://github.com/ovro-lwa/mnc_python.git",
  "numpy",
  "protobuf<=3.20",
  "progressbar2",
  "pyyaml",
  "requests",
  "scipy",
  "setuptools_scm",
  "structlog>=21.0.0",
  "termcolor",
  "tftpy==0.8.0",
 ]
 name = "mnc_aggregator"
 description = """Defines interfaces for aggregating multiple etcd monitor points into a single summary.
 The summary point can then be ingested by etcd2db.
 """
 license-files = { paths = [ "LICENSE" ] }
 readme = "README.md"
 requires-python = ">=3.10"
 dynamic = [ "version" ]


[tool.hatch]
 version.source               = "vcs"
 version.raw-options          = { root = ".." }
 build.hooks.vcs.version-file = "src/mnc_aggregator/version.py"

 [tool.hatch.build.targets.wheel]
  packages = [ "src/mnc_aggregator" ]

[tool.hatch.metadata]
 allow-direct-references = true
