[build-system]
 requires      = [ "hatchling", "hatch-vcs" ]
 build-backend = "hatchling.build"


[project]
 dependencies = [
  "astropy",
  "casperfpga",
  "python-dateutil",
  "dsa110-pyutils",
  "etcd3",
  "glances",
  "influxdb",
  "ipython",
  "lwa_f",
  "matplotlib",
  "mnc-python",
  "numpy",
  "protobuf<=3.20",
  "progressbar2",
  "pyyaml",
  "requests",
  "scipy",
  "setuptools_scm",
  "structlog>=21.0.0",
  "termcolor",
  "tftpy==0.8.0",
 ]
 name = "mnc_aggregator"
 description = """Defines interfaces for aggregating multiple etcd monitor points into a single summary.
 The summary point can then be ingested by etcd2db.
 """
 license-files = { paths = [ "LICENSE" ] }
 readme = "README.md"
 requires-python = ">=3.6"
 dynamic = [ "version" ]


 [project.optional-dependencies]
  dev = [ "pytest>=8" ]

 [project.scripts]
  aggregate_monitor_points = "mnc_aggregator.cli:main"


[tool.hatch]
 version.source               = "vcs"
 version.raw-options          = { root = ".." }
 build.hooks.vcs.version-file = "src/mnc_aggregator/version.py"

 [tool.hatch.build.targets.wheel]
  packages = [ "src/mnc_aggregator" ]
