[build-system]
 requires      = [ "hatchling", "hatch-vcs" ]
 build-backend = "hatchling.build"


[project]
 dependencies = [ "astropy", "casadata", "casatasks", "ffmpeg-python", "numpy" ]
 name = "nightly_movie"
 description = """Creates a movie of images from OVRO-LWA raw ms files.
 """
 license = "BSD-3-Clause"
 readme = "README.md"
 requires-python = ">=3.6"
 dynamic = [ "version" ]


 [project.scripts]
  ovro_nightly_movie = "nightly_movie.cli:main"


[tool.hatch]
 version.source               = "vcs"
 version.raw-options          = { root = ".." }
 build.hooks.vcs.version-file = "src/nightly_movie/version.py"

 [tool.hatch.build.targets.wheel]
  packages = [ "src/nightly_movie" ]
