[build-system]
 requires      = [ "hatchling", "hatch-vcs" ]
 build-backend = "hatchling.build"


[project]
 dependencies = [
  "astropy",
  "casaconfig==1.2.0",
  "casadata",
  "casatasks",
  "etcd3",
  "ffmpeg-python",
  "numpy",
 ]
 name = "nightly_movie"
 description = """Creates a movie of images from OVRO-LWA raw ms files.
 """
 license = "BSD-3-Clause"
 readme = "README.md"
 requires-python = ">=3.8"
 dynamic = [ "version" ]


 [project.scripts]
  ovro_nightly_movie             = "nightly_movie.cli:main"
  ovro_nightly_naive_calibration = "nightly_movie.cli:naive_calibration"
  ovro_nightly_image_snapshot    = "nightly_movie.cli:image_snapshot"
  ovro_nightly_create_movie      = "nightly_movie.cli:create_mp4"


[tool.hatch]
 version.source               = "vcs"
 version.raw-options          = { root = ".." }
 build.hooks.vcs.version-file = "src/nightly_movie/version.py"

 [tool.hatch.build.targets.wheel]
  packages = [ "src/nightly_movie" ]
