[build-system]
 requires      = [ "hatchling", "hatch-vcs" ]
 build-backend = "hatchling.build"


[project]
 dependencies = [
  "astropy==5.2.2",
  "casaconfig==1.2.0",
  "casadata==2024.1.15",
  "casatasks==6.6.3.22",
  "etcd3==0.12.0",
  "protobuf==3.20.0",
  "ffmpeg-python==0.2.0",
  "numpy==1.24.4",
 ]
 name = "nightly_movie"
 description = """Creates a movie of images from OVRO-LWA raw ms files.
 """
 license = "BSD-3-Clause"
 readme = "README.md"
 requires-python = ">=3.8"
 dynamic = [ "version" ]


 [project.scripts]
  ovro_nightly_movie             = "nightly_movie.cli:main"
  ovro_nightly_naive_calibration = "nightly_movie.cli:naive_calibration"
  ovro_nightly_image_snapshot    = "nightly_movie.cli:image_snapshot"
  ovro_nightly_create_movie      = "nightly_movie.cli:create_mp4"


[tool.hatch]
 version.source               = "vcs"
 version.raw-options          = { root = ".." }
 build.hooks.vcs.version-file = "src/nightly_movie/version.py"

 [tool.hatch.build.targets.wheel]
  packages = [ "src/nightly_movie" ]
